--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 #配置Excel导入和导出的配置
 excelPath=template_excel.xlsx
 #导出的文件路径
-exportSqlDir=D:/excel/
+exportSqlDir=/Users/xiaoweihao/temp
 #是否导出脚本到文件
 outputScriptFile=true
 
