--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #配置Excel导入和导出的配置
-excelPath=data_platform_excel.xlsx
+excelPath=template_excel.xlsx
 #导出的文件路径
 exportSqlDir=D:/excel/
 #是否导出脚本到文件
@@ -9,20 +9,20 @@ outputScriptFile=true
 buildJava=true
 #	Java构建配置
 #Java的构建包名
-buildConf.packageName=hmdp.microservice.service.platformservice
+buildConf.packageName=cn.arvin.book.app
 #注释作者
-buildConf.author=arvin.xiao
-#要忽略生成的表名,分隔
+buildConf.author=arvin
+#要忽略生成的表名
 buildConf.excludeTable=
-#指定生成的表名,分隔
-buildConf.includeTable=revise_hcp,revise_hcp_association,revise_hcp_education,revise_hcp_award,revise_hcp_honour
+#指定生成的表名
+buildConf.includeTable=
 
 # 配置数据源 
 # 是否开启自动创建数据库
 autoRunScript=true
 #数据源配置
-dataSource.host=47.116.109.105
+dataSource.host=127.0.0.1
 dataSource.port=3306
-dataSource.database=hm_data_platform_dev
-dataSource.user=data_dev
-dataSource.password=Huimei@1234
+dataSource.database=excel
+dataSource.user=root
+dataSource.password=root
