--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 #配置Excel导入和导出的配置
-excelPath=template_excel.xlsx
+excelPath=research-template.xlsx
+#excelPath=template_excel.xlsx
 #导出的文件路径
 exportSqlDir=/Users/xiaoweihao/temp
 #是否导出脚本到文件
@@ -9,15 +10,17 @@ outputScriptFile=true
 buildJava=true
 #	Java构建配置
 #Java的构建包名
-buildConf.packageName=cn.arvin.book.app
+buildConf.packageName=com.ruoyi.system
 #注释作者
-buildConf.author=arvin
+buildConf.author=arvin.xiao
 #要忽略生成的表名
 buildConf.excludeTable=
 #指定生成的表名
 buildConf.includeTable=
+#表名前缀
+buildConf.tablePrefix=IMP_
 
-# 配置数据源 
+# 配置数据源
 # 是否开启自动创建数据库
 autoRunScript=true
 #数据源配置
