--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,8 @@
 #配置Excel导入和导出的配置
 excelPath=template_excel.xlsx
 #导出的文件路径
-exportSqlDir=D:/excel/
+#exportSqlDir=D:/excel/
+exportSqlDir=/Users/xiaoweihao/temp
 #是否导出脚本到文件
 outputScriptFile=true
 
@@ -17,7 +18,7 @@ buildConf.excludeTable=
 #指定生成的表名
 buildConf.includeTable=
 
-# 配置数据源 
+# 配置数据源
 # 是否开启自动创建数据库
 autoRunScript=true
 #数据源配置
