--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -29,3 +29,6 @@ dataSource.port=3306
 dataSource.database=excel
 dataSource.user=root
 dataSource.password=root
+
+# 输出数据库文档
+outputDatabaseDoc=true
